--- a/css/style.css
+++ b/css/style.css
@@ -57,14 +57,15 @@ img {
     max-width: 1100px;
     margin: 0 auto;   
     padding: 5% ;   
-    margin-top: 250px;      
+    margin-top: 250px;  
+    text-align: center;  
 }
  
 .front-page .column {
   width: 100%;
   border-radius: 10%;
 }
- 
+/* 
 .navbar {
     background: linear-gradient(white, whitesmoke);
     color: #333;
@@ -74,7 +75,8 @@ img {
     transition: 0.4s;
     overflow: hidden;
     top:0;
-    padding:50px 10px;
+    margin-bottom: 1em;
+    padding:0px 0px;
 }
 
 .navbar ul {
@@ -109,7 +111,7 @@ img {
 .navbar .flex {  
     justify-content: space-between;
 }
-
+*/
 .container {
     max-width: 1100px;
     margin: 0 auto;
@@ -121,7 +123,7 @@ img {
     max-width: 1100px;
     margin: 0 auto;
     overflow: auto;
-    padding: 20% 40px;  
+    padding: 20em 3em 10em 3em;  
     
 }
 
@@ -158,16 +160,14 @@ img {
 
 
 .btn__front {
-  display: inline-flex;  
-  justify-content: right;
-  align-items: right;
-  background: gold;
+  display: inline-flex;    
+  background:#927757;
   text-decoration: none;
-  color: #333;
+  color: whitesmoke;
   padding: .5em 1.25em;
   font-size: 20px;
-  border-radius: 100px;  
-  margin: 0 auto;
+  border-radius: 100px;    
+  
 }
 
 .btn__front:hover,
@@ -175,26 +175,14 @@ img {
   opacity: .75;
 }
 
-/*.btn {    
-    padding: 16px 32px;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;        
-    display: flex;  
-    background-color: #333;  
-  }*/
-
-  .see-more{
-    margin: 2% 40%;
+@media screen and (max-width: 300px) {
+  .btn__front {
+    width: 80%;
   }
+}
 
-  @media screen and (max-width: 100px) {
-    .see-more {
-      width: 1000%;
 
-    }
-  }
-
+ 
   @media screen and (max-width: 500px) {
     .column {
       width: 100%;
@@ -234,6 +222,21 @@ img {
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
     .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column-front {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column-front {
       flex: 100%;
       max-width: 100%;
     }
